k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: mkjs
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
